# LsCodeStore

./: build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
LsComposingBuild/: build.gradle
LsMediaEditor/: build.gradle
LsMediaEditor/src/main/: AndroidManifest.xml
LsMediaEditor/src/main/res/drawable/: ic_back.xml
LsMediaEditor/src/main/res/layout/: camera_record_fragment.xml
ankomodule/: build.gradle
ankomodule/src/main/res/values/: strings.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  oboe_code.cpp  oboe_code.h
app/src/main/res/: dimens.xml
app/src/main/res/anim/: alpha_out.xml  alphazoom0.xml  function_in.xml  function_out.xml  push_left_in.xml  push_right_in.xml  push_right_out.xml  zoomin_from_bottom_10.xml  zoomin_from_bottom_30.xml  zoomin_from_bottom_50.xml  zoomin_from_bottom_70.xml
app/src/test/java/: Tools.kt
basemodule/: build.gradle
basemodule/src/main/: AndroidManifest.xml
composemodule/: build.gradle
composemodule/src/main/: AndroidManifest.xml
firstmodule/: build.gradle
firstmodule/src/main/: AndroidManifest.xml
flutter_module/: .metadata  pubspec.yaml  settings.gradle
flutter_module/lib/: data.dart  list.dart  main.dart  network.dart
gradle/wrapper/: gradle-wrapper.properties
lsMediaEditor/: build.gradle
lsMediaEditor/src/main/cpp/: CMakeLists.txt  oboe_audio.cpp
secondmodule/: build.gradle
secondmodule/src/main/: AndroidManifest.xml
versionModule/src/main/: AndroidManifest.xml
(+239 files in other folders)
